# automatelife

./: .gitignore  Pipfile  README.md  TODO.md  pyproject.toml  setup.py
automatelife/: __init__.py  cmd.py  config.py  constants.py  core.py  exceptions.py  language.py  utils.py
automatelife/static/definitions/: default.json  other.json  python.json
automatelife/static/lang_definitions/: other.json  python.json
automatelife/templates/languages/: python.json
automatelife/templates/languages/python/: python.json  schema.json
